@@ -61,6 +61,7 @@
 
 * Fixed a bug when using RTPATHOCL with multiple CUDA devices
 * Fixed a bug when using shadow transparency (for Path tracing)
+* Fixed a LuxCoreUI crash when GPU rendering is not available (pull request #406)
 
 Note: due to Glossycoating updated support for bump mapping on GPUs, some old scene using this kind of material/bump map combination may require some fix.
 
